--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=https://google.com">
+    <meta http-equiv="refresh" content="0; URL=https://www.youtube.com">
     <title>Redirection...</title>
   </head>
   <body>
     <p>Redirection en cours…</p>
   </body>
 </html>
+
