--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=https://youtube.com">
+    <meta http-equiv="refresh" content="0; URL=https://youtube.com?v=12345&t=1">
     <title>Redirection...</title>
   </head>
   <body>
