--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=https://youtube.com?v=12345&t=1">
+    <meta http-equiv="refresh" content="0; URL=https://fr.wikipedia.org/wiki/Wikipédia:Accueil_principal?v=12345&t=2">
     <title>Redirection...</title>
   </head>
   <body>
     <p>Redirection en cours…</p>
   </body>
 </html>
+
