--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=https://fr.wikipedia.org/wiki/Wikipédia:Accueil_principal?v=12345&t=7">
+    <meta http-equiv="refresh" content="0; URL=https://dpm.lol/tierlist?lane=middle&tier=emerald_plus&platform=euw1?v=3&t=8">
     <title>Redirection...</title>
   </head>
   <body>
     <p>Redirection en cours…</p>
   </body>
 </html>
+
