--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
    <meta http-equiv="refresh" content="0; URL=https://dpm.lol/tierlist?lane=middle&tier=emerald_plus&platform=euw1?v=3&t=8">
     <title>Redirection...</title>
   </head>
