--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-   <meta http-equiv="refresh" content="0; URL=https://dpm.lol/tierlist?lane=middle&tier=emerald_plus&platform=euw1?v=3&t=8">
+   <meta http-equiv="refresh" content="0; URL=https://x.com/home?lang=fr?v=33&t=833">
     <title>Redirection...</title>
   </head>
   <body>
     <p>Redirection en cours…</p>
   </body>
 </html>
+
